--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1,7 +1,11 @@
+@import "compass/css3";
+
 html,
 body {
   width: 100%;
   height: 100%;
+  font-family: Dosis;
+  background-color: rgb(0, 0, 0);
 }
 
 .carousel-item {
@@ -14,11 +18,113 @@ body {
     background-size: cover;
   }
 
-  nav {
-      background: black;
+.centermodal {
+    text-align: center;
+}
+
+  .navbar {
+    mix-blend-mode: difference;
   }
 
+
   h1 {
-      color: white;
-      font-family: Lato;
+      color: #ffffff;
+      font-family: Dosis;
   }
+
+  
+  p {
+    color: #ffffff;
+    font-family: Dosis;
+}
+
+  h4 {
+    color: #ffffff;
+    font-family: Dosis;
+    font-size: 20px;
+    font-weight: 900;
+}
+
+  
+
+  .nav-item {
+      font-weight: 900;
+      mix-blend-mode: difference;
+      display: block;
+  }
+
+  .invert_las {
+    mix-blend-mode: difference;
+  }
+
+
+.form-area {
+	padding: 5px 40px 20px;
+	margin: 5px 0px 20px;
+}
+
+ol, ul {
+    list-style: none;
+}
+
+
+.label {
+    font-size: 36px;
+    color: white;
+    font-family: Dosis;
+}
+
+.label:hover {
+    text-decoration: none;
+    color: rgb(158, 158, 158);
+}
+
+.carousel {
+    mix-blend-mode: difference;
+}
+
+.navbar-dark .navbar-nav .nav-link {
+    color: #ffffff;
+}
+
+#page1 {
+    background-color: black;
+}
+
+.card {
+    background-color: rgba(24, 24, 24, 0);
+    transition: 0.3s;
+    width: 100%;
+}
+
+.card:hover {
+    background-color: rgb(21, 21, 43);
+    cursor: pointer;
+    text-decoration: none;
+}
+
+.card-image {
+    width: 10%;
+    height: auto;
+}
+
+.portfolio{
+    padding-top: 10%;
+}
+
+.img-circle {
+    border-radius: 10px;
+}
+
+.jumbotron {
+    background-color: black;
+}
+
+.aboutmeimage {
+    border-radius: 8px;
+    padding-bottom: 20px;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    
+}
